Fixed Social links not showing on mobile version, Changed header Title, edited state finder description

--- a/production/scss/pages/_home-mobile.scss
+++ b/production/scss/pages/_home-mobile.scss
@@ -7,7 +7,13 @@
         }
 
         &__links {
-            display: none;
+            color: $primary;
+            bottom: 4%;
+            right: 5%;
+
+            & li {
+                opacity: 1;
+            }
         }
     }
 
